[fix] 현재 모각방 참여 인원 소켓 기반 수정